--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "postcss": "^8.5.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.3",
     "vite": "^5.2.0"
   }
